--- a/RMISWeb/web.config
+++ b/RMISWeb/web.config
@@ -76,21 +76,25 @@
       <add verb="GET,HEAD" path="ScriptResource.axd" validate="false" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
     </httpHandlers>
 
-    <membership defaultProvider="SecurityTutorialsSqlMembershipProvider">
+
+    <authentication mode="Forms">
+      <forms loginUrl="~/LogOn.aspx" timeout="2880" defaultUrl="~/MasterDataSettings.aspx"/>
+    </authentication>
+    <membership defaultProvider="CustomMembershipProvider">
       <providers>
-        <!-- Add a customized SqlMembershipProvider -->
-        <add name="SecurityTutorialsSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="SecurityTutorialsConnectionString" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="true" applicationName="SecurityTutorials" requiresUniqueEmail="true" passwordFormat="Hashed" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="7" minRequiredNonalphanumericCharacters="1" passwordAttemptWindow="10" passwordStrengthRegularExpression=""/>
+        <clear/>
+        <add name="CustomMembershipProvider" type="CustomMembershipProvider" connectionStringName="SecurityTutorialsConnectionString" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/"/>
       </providers>
     </membership>
-    <roleManager enabled="true" defaultProvider="SecurityTutorialsSqlRoleProvider"
-		        cacheRolesInCookie="true" createPersistentCookie="false" cookieProtection="All">
+    <roleManager enabled="true" defaultProvider="CustomRoleProvider">
       <providers>
-        <add name="SecurityTutorialsSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" applicationName="SecurityTutorials" connectionStringName="SecurityTutorialsConnectionString"/>
+        <clear/>
+        <add name="CustomRoleProvider" type="CustomRoleProvider" connectionStringName="SecurityTutorialsConnectionString" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" writeExceptionsToEventLog="false"/>
       </providers>
     </roleManager>
-    <authentication mode="Forms">
-      <forms slidingExpiration="true" timeout="60"/>
-    </authentication>
+
+    
+   
     <customErrors mode="Off"/>
     <httpModules>
       <add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
