Added Autentication Mechanism
Added Autentication Mechanism

--- a/RMISWeb/Roles/Web.config
+++ b/RMISWeb/Roles/Web.config
@@ -2,9 +2,7 @@
 <configuration>
     <system.web>
         <authorization>
-            <allow roles="SuperUser" />
-            <deny users="*"/>
+            <deny users="?" />
         </authorization>
     </system.web>   
-    
 </configuration>
