--- a/PartialUpdatePanel/Control/Control.csproj
+++ b/PartialUpdatePanel/Control/Control.csproj
@@ -123,6 +123,9 @@
   <ItemGroup>
     <Compile Include="PartialUpdatePanelLoader.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Web.sitemap" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
