--- a/RMISWeb/web.config
+++ b/RMISWeb/web.config
@@ -78,18 +78,18 @@
 
 
     <authentication mode="Forms">
-      <forms loginUrl="~/LogOn.aspx" timeout="2880" defaultUrl="~/MasterDataSettings.aspx"/>
+      <forms timeout="2880" />
     </authentication>
-    <membership defaultProvider="CustomMembershipProvider">
+    <membership defaultProvider="SecurityTutorialsSqlMembershipProvider">
       <providers>
-        <clear/>
-        <add name="CustomMembershipProvider" type="CustomMembershipProvider" connectionStringName="SecurityTutorialsConnectionString" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/"/>
+        <!-- Add a customized SqlMembershipProvider -->
+        <add name="SecurityTutorialsSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="SecurityTutorialsConnectionString" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="true" applicationName="SecurityTutorials" requiresUniqueEmail="true" passwordFormat="Hashed" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="7" minRequiredNonalphanumericCharacters="1" passwordAttemptWindow="10" passwordStrengthRegularExpression=""/>
       </providers>
     </membership>
-    <roleManager enabled="true" defaultProvider="CustomRoleProvider">
+    <roleManager enabled="true" defaultProvider="SecurityTutorialsSqlRoleProvider"
+		        cacheRolesInCookie="true" createPersistentCookie="false" cookieProtection="All">
       <providers>
-        <clear/>
-        <add name="CustomRoleProvider" type="CustomRoleProvider" connectionStringName="SecurityTutorialsConnectionString" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" writeExceptionsToEventLog="false"/>
+        <add name="SecurityTutorialsSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" applicationName="SecurityTutorials" connectionStringName="SecurityTutorialsConnectionString"/>
       </providers>
     </roleManager>
 
