--- a/RMIS.Domain/RMIS.Domain/RMIS.Domain.csproj
+++ b/RMIS.Domain/RMIS.Domain/RMIS.Domain.csproj
@@ -69,6 +69,8 @@
     <Compile Include="RiceMill\BrokenRiceSellingInfoEntity.cs" />
     <Compile Include="RiceMill\BuyerInfoEntity.cs" />
     <Compile Include="RiceMill\BuyerSellerRatingEntity.cs" />
+    <Compile Include="RiceMill\MSalaryTypeEntity.cs" />
+    <Compile Include="RiceMill\MEmployeeDesignationEntity.cs" />
     <Compile Include="RiceMill\HullingProcessExpensesEntity.cs" />
     <Compile Include="RiceMill\RMUserRoleEntity.cs" />
     <Compile Include="RiceMill\MRolesEntity.cs" />
