--- a/RMIS.Entities.BackEnd/RMIS.Entities.BackEnd.csproj
+++ b/RMIS.Entities.BackEnd/RMIS.Entities.BackEnd.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Model\Entities\BrokenRiceSellingInfo.cs" />
     <Compile Include="Model\Entities\BuyerInfo.cs" />
     <Compile Include="Model\Entities\BuyerSellerRating.cs" />
+    <Compile Include="Model\Entities\EmployeeSalary.cs" />
     <Compile Include="Model\Entities\EmployeeDetails.cs" />
     <Compile Include="Model\Entities\MSalaryType.cs" />
     <Compile Include="Model\Entities\MEmployeeDesignation.cs" />
@@ -173,6 +174,7 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\EntityMappings\EmployeeDetails.hbm.xml" />
+    <EmbeddedResource Include="Persistence\EntityMappings\EmployeeSalary.hbm.xml" />
     <Content Include="Persistence\EntityMappings\HullingProcessExpenses.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
