--- a/RMIS.CustomControls/RMIS.CustomControls.csproj
+++ b/RMIS.CustomControls/RMIS.CustomControls.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AjaxControlToolkit">
+      <HintPath>..\Bin\AjaxControlToolkit.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
@@ -47,6 +50,9 @@
     <Compile Include="Keys.cs" />
     <Compile Include="PagingGridView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextBoxAutoExtender.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="GridViewKeyBoardPagerBehavior.js" />
