--- a/RMIS.Domain/RMIS.Domain/RMIS.Domain.csproj
+++ b/RMIS.Domain/RMIS.Domain/RMIS.Domain.csproj
@@ -69,6 +69,7 @@
     <Compile Include="RiceMill\BrokenRiceSellingInfoEntity.cs" />
     <Compile Include="RiceMill\BuyerInfoEntity.cs" />
     <Compile Include="RiceMill\BuyerSellerRatingEntity.cs" />
+    <Compile Include="RiceMill\ProductPaymentTransactionEntity.cs" />
     <Compile Include="RiceMill\ProductSellingInfoDisplay.cs" />
     <Compile Include="RiceMill\ProductPaymentInfoEntity.cs" />
     <Compile Include="RiceMill\OtherExpensesEntity.cs" />
