--- a/RMIS.Entities.BackEnd/RMIS.Entities.BackEnd.csproj
+++ b/RMIS.Entities.BackEnd/RMIS.Entities.BackEnd.csproj
@@ -170,7 +170,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Persistence\EntityMappings\MoneyTransaction.hbm.xml" />
     <EmbeddedResource Include="Persistence\EntityMappings\BuyerSellerRating.hbm.xml" />
-    <Content Include="Persistence\EntityMappings\BuyerInfo.hbm.xml" />
+    <EmbeddedResource Include="Persistence\EntityMappings\BuyerInfo.hbm.xml" />
     <EmbeddedResource Include="Persistence\EntityMappings\MEmployeeDesignation.hbm.xml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
