--- a/RMIS.CustomControls/RMIS.CustomControls.csproj
+++ b/RMIS.CustomControls/RMIS.CustomControls.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomTabContainer.cs" />
     <Compile Include="GridViewKeyBoardPagerExtender.cs" />
     <Compile Include="Keys.cs" />
     <Compile Include="PagingGridView.cs" />
