--- a/RMIS.Entities.BackEnd/RMIS.Entities.BackEnd.csproj
+++ b/RMIS.Entities.BackEnd/RMIS.Entities.BackEnd.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Model\Entities\BrokenRiceStockInfo.cs" />
     <Compile Include="Model\Entities\BuyerInfo.cs" />
     <Compile Include="Model\Entities\BuyerSellerRating.cs" />
+    <Compile Include="Model\Entities\BagPaymentInfo.cs" />
     <Compile Include="Model\Entities\ProductPaymentTransaction.cs" />
     <Compile Include="Model\Entities\ProductPaymentInfo.cs" />
     <Compile Include="Model\Entities\EmployeeSalary.cs" />
@@ -172,6 +173,9 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\EntityMappings\HullingProcessExpenses.hbm.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Persistence\EntityMappings\BagPaymentInfo.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
