--- a/RMIS.Domain/RMIS.Domain/RMIS.Domain.csproj
+++ b/RMIS.Domain/RMIS.Domain/RMIS.Domain.csproj
@@ -68,6 +68,7 @@
     <Compile Include="RiceMill\BrokenRiceStockInfoEntity.cs" />
     <Compile Include="RiceMill\BuyerInfoEntity.cs" />
     <Compile Include="RiceMill\BuyerSellerRatingEntity.cs" />
+    <Compile Include="RiceMill\BagPaymentInfoEntity.cs" />
     <Compile Include="RiceMill\ProductPaymentTransactionEntity.cs" />
     <Compile Include="RiceMill\ProductSellingInfoDisplay.cs" />
     <Compile Include="RiceMill\ProductPaymentInfoEntity.cs" />
