--- a/RMISWeb/web.config
+++ b/RMISWeb/web.config
@@ -7,6 +7,7 @@
     <!-- Start NHibernate Session Management Settings -->
     <section name="nhibernateSettings" type="AllInOne.Common.DataAccess.NHibernate.OpenSessionInViewSection, AllInOne.Common.DataAccess.NHibernate" />
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    
     <!-- End NHibernate Session Management Settings -->
     <sectionGroup name="system.web.extensions" type="System.Web.Configuration.SystemWebExtensionsSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
       <sectionGroup name="scripting" type="System.Web.Configuration.ScriptingSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
@@ -24,6 +25,7 @@
     <add key="PartialUpdatePanel.EncryptionKey" value="k39#9sn1" />
     <add key="LogConfigFileLocation" value="k39#9sn1" />
     <add key="SecurityKey" value="k39#9sn1" />
+    <add key="log4net.Internal.Debug" value="true"/>
   </appSettings>
   <connectionStrings>
     <add name="SecurityTutorialsConnectionString" connectionString="Server=.;Database=RMIS;Trusted_Connection=Yes;" providerName="System.Data.SqlClient" />
@@ -158,21 +160,63 @@
     </sessionFactories>
   </nhibernateSettings>
   <log4net debug="true">
-    <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="TestLog.txt" />
-      <appendToFile value="true" />
-      <rollingStyle value="Size" />
-      <maxSizeRollBackups value="10" />
-      <maximumFileSize value="10MB" />
-      <staticLogFileName value="true" />
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%-5p %d %5rms %-22.22c{1} %-18.18M - %m%n" />
-      </layout>
-    </appender>
     <root>
-      <level value="DEBUG" />
-      <appender-ref ref="RollingLogFileAppender" />
+      <level value="Error" />
+      <appender-ref ref="AdoNetAppender" />
     </root>
+    <appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
+      <bufferSize value="1" />
+      <!--THIS WILL POSTPONE DB WRITING UNTIL A BUFFER OF 100 LOG IS REACHED-->
+
+      <connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      <connectionString value="server=.; uid=sa; pwd=Pass1234; database=RMIS" />
+
+      <commandText value="INSERT INTO AppLog ([Date],[Thread],[Level],[Logger],[Message],[Exception]) VALUES (@log_date, @thread, @log_level, @logger, @message,@exception)" />
+
+      <parameter>
+        <parameterName value="@log_date" />
+        <dbType value="DateTime" />
+        <layout type="log4net.Layout.RawTimeStampLayout" />
+      </parameter>
+      <parameter>
+        <parameterName value="@thread" />
+        <dbType value="String" />
+        <size value="255" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%thread" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@log_level" />
+        <dbType value="String" />
+        <size value="50" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%level" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@logger" />
+        <dbType value="String" />
+        <size value="255" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%logger" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@message" />
+        <dbType value="String" />
+        <size value="4000" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%message" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@exception" />
+        <dbType value="String" />
+        <size value="2000" />
+        <layout type="log4net.Layout.ExceptionLayout" />
+      </parameter>
+    </appender>  
   </log4net>
   <system.codedom>
     <compilers>
