--- a/RMISWeb/web.config
+++ b/RMISWeb/web.config
@@ -93,7 +93,7 @@
         validate="false" />
     </httpHandlers>
     <authentication mode="Forms">
-      <forms loginUrl="~/LogOnNew.aspx" timeout="2880" defaultUrl="~/Default.aspx" />
+      <forms loginUrl="~/LogOn.aspx" timeout="2880" defaultUrl="~/Default.aspx" />
     </authentication>
     <membership defaultProvider="CustomMembershipProvider">
       <providers>
